--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,46 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Oswald&display=swap');
 body{
     margin:0;
     padding:0;
     display:flex;
     justify-content:center;
     align-items:center;
-    min-height:100vh;
+    height:100vh;
     background:#ecf0f3;
-}
-.score{
-    margin:30px;
-}
-.container{
-    padding:50px;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    box-shadow:13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
-    border-radius:5px;
-    width:50vw;
-    height:70vh;
-}
-.controls button{
-    height:30px;
-    width:70px;
-    font-weight:bolder;
-    border:none;
-    margin:15px;
-    border-radius:5px;
-    transition:.1s;
-    box-shadow: 5px 5px 8px #00000020;
-    cursor:pointer;
     -webkit-user-select:none;
     user-select:none;
 }
-.options button{
-    height:20px;
-    border:none;
-    padding:15px;
-    margin:35px;
-    cursor:pointer;
+h1{
+    text-align:center;
+    font-family:'Oswald';
+}
+.score{
+    font-size:larger;
+    text-align: center;
+    font-family: 'Caveat';
+}
+.container{
+    padding:30px;
     display:flex;
+    flex-direction:column;
+    box-shadow:13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
+    border-radius:5px;
+}
+#question-area{
+    margin:10px;
+    padding:10px;
+    background:#ffffff;
+    border-radius:5px;
+    text-align:left;
+    height:300px;
+    width:300px;
+    font-size:large;
+    font-weight:bold ;
+    font-family:'Oswald';
+}
+.controls button{
+    padding:5px;
+    border:none;
+    margin:15px;
+    width:53px;
+    border-radius:5px;
+    box-shadow: 5px 5px 8px #00000020;
+    cursor:pointer;
+    background:#ffffff;
+    font-family: 'Oswald';
+}
+.options button{
+    background:none;
+    border:none;
+    padding:10px;
+    margin:10px;
+    cursor:pointer;
+    display:grid;
+    font-size:medium;
+    font-family: 'Oswald';
 }
 .controls button:hover {
     border-radius:5px;
@@ -50,9 +67,6 @@ body{
 .score{
     text-align:right;
     padding-right:.5em;
-}
-#user-score, #total-score{
-    color:black;
 }
 .hide{
     display:none;
